--- a/index.html
+++ b/index.html
@@ -11,41 +11,50 @@
 
 <body>
     <div class="main">
-
-        <form action="" method="POST" class="form" id="form-1">
+        <form action="" class="form" id="form-1">
             <h3 class="heading">Thành viên đăng ký</h3>
-            <p class="desc">Cùng nhau học lập trình miễn phí tại F8 ❤️</p>
-
+            <p class="desc">Cùng nhau học lập trình</p>
             <div class="spacer"></div>
 
             <div class="form-group">
-                <label for="fullname" class="form-label">Tên đầy đủ</label>
-                <input id="fullname" name="fullname" type="text" placeholder="VD: Sơn Đặng" class="form-control">
+                <label class="form-label" for="fullname">Tên đầy đủ</label>
+                <input type="text" id="fullname" name="fullname" placeholder="VD: Nguyễn Tiến Dũng" class="form-control" />
                 <span class="form-message"></span>
             </div>
 
             <div class="form-group">
-                <label for="email" class="form-label">Email</label>
-                <input id="email" name="email" type="text" placeholder="VD: email@domain.com" class="form-control">
+                <label class="form-label" for="email">Email</label>
+                <input type="text" id="email" name="email" placeholder="VD: pknguyen@gmail.com" class="form-control" />
                 <span class="form-message"></span>
             </div>
 
             <div class="form-group">
-                <label for="password" class="form-label">Mật khẩu</label>
-                <input id="password" name="password" type="password" placeholder="Nhập mật khẩu" class="form-control">
+                <label class="form-label" for="password">Mật khẩu</label>
+                <input type="password" id="password" name="password" placeholder="Nhập mật khẩu" class="form-control" />
                 <span class="form-message"></span>
             </div>
 
             <div class="form-group">
-                <label for="password_confirmation" class="form-label">Nhập lại mật khẩu</label>
-                <input id="password_confirmation" name="password_confirmation" placeholder="Nhập lại mật khẩu" type="password" class="form-control">
+                <label class="form-label" for="password-confirmation">Nhập lại mật khẩu</label>
+                <input type="password" id="password-confirmation" name="password-confirmation" placeholder="Nhập lại mật khẩu" class="form-control" />
                 <span class="form-message"></span>
             </div>
 
             <button class="form-submit">Đăng ký</button>
         </form>
-
     </div>
+
+    <script src="javascript.js"></script>
+
+    <script>
+        Validator({
+            form: '#form-1',
+            rules: [
+                Validator.isRequired('#fullname'),
+                Validator.isEmail('#email'),
+            ]
+        });
+    </script>
 </body>
 
 </html>
